--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,13 @@ services:
       - "--entrypoints.web.address=:80"
      ## - "--certificateresolvers.myresolver.acme.httpchallenge=true"
      ## -"--certificateresolvers.myresolver.acme.httpchallenge.entrypoint=web"
+      - "--entrypoints.traefik.address=:8080"
+      - "--metrics.prometheus=true"
+      - "--metrics.prometheus.entryPoint=traefik"
     ports:
       - "80:80"
       - "443:443"
+      - "8080:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     user: root
