--- a/prometheus/rules.yml
+++ b/prometheus/rules.yml
@@ -1,10 +1,11 @@
-groups:
+groups: 
   - name: alert.rules
-    rules:
+    rules: 
       - alert: HighCpuUsage
-        expr: process_cpu_seconds_total > 0.5 
-        for: 5m 
+        expr: rate(process_cpu_second_total[1m]) > 0.5
+        for: 1m 
         labels:
           saverity: critical
-        annotations: 
+        annotatinons:
           summary: "CPU usage is high"
+          description: "Process {{ $labels.instance }} consume a lot of CPU"
