--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,8 +49,8 @@ services:
     networks:
       - frontend_net
     environment:
-      - TELEGRAM_CHAT_ID=""
-      - TELEGRAM_BOT_TOKEN=""
+      - TELEGRAM_CHAT_ID=
+      - TELEGRAM_BOT_TOKEN=
 
 
   # Grafana
